<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:id="@+id/nav_chores"
            android:icon="@mipmap/gb_purple"
            android:title="@string/menu_item_chores" />
        <item android:id="@+id/nav_my_goblin"
            android:icon="@mipmap/gb_pink"
            android:title="@string/menu_item_my_goblin" />
        <item android:id="@+id/nav_history"
            android:icon="@mipmap/gb_very_green"
            android:title="@string/menu_item_history" />
        <item android:id="@+id/nav_cave"
            android:icon="@mipmap/gb_very_green"
            android:title="@string/menu_item_cave" />
        <item android:id="@+id/nav_settings"
            android:icon="@mipmap/gb_very_green"
            android:title="@string/menu_item_settings" />
        <item android:id="@+id/nav_logged_goblin"
            android:title="" />
        <item android:id="@+id/nav_house_code"
            android:title="" />
    </group>

</menu>